# eeee2076

./: .gitignore  REAMDE.md  git-cheat-sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
Worksheet 3/: adder.h  calc.cpp  hello.cpp  util.cpp  util.h
Worksheet 4/: CMakeLists.txt  hello.cpp  util.cpp
Worksheet 4/Calc/: CMakeLists.txt  calc.cpp
Worksheet 4/dynamic_release/include/: adder.h
Worksheet5/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
Worksheet5/html/: adder_8h.html  adder_8h_source.html  files.html
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex  files.tex
Worksheet6/WorkSheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet6/WorkSheet6/WorkSheet6/Worksheet6/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
release_dynamic/adder_dynamic/lib/: libadder.exp
work7/Worksheet7/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet3 (1)/: adder.exp  adder.h  adder.lib  libadder.lib
ws7/: CMakeLists.txt
ws7/QtBaseStation/: CMakeLists.txt  main.cpp
